--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           >
           <ul class="header-list">
             <li class="header-item">
-              <a class="header-link" href="./index.html">Studio</a>
+              <a class="header-link active" href="./index.html">Studio</a>
             </li>
             <li class="header-item">
               <a class="header-link" href="./portfolio.html">Portfolio</a>
@@ -61,7 +61,9 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="hero-btn">Order Service</button>
+          <button type="button" data-modal-open class="hero-btn">
+            Order Service
+          </button>
         </div>
       </section>
       <!------------feature---------------->
@@ -422,5 +424,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" data-modal-close class="modal-btn-close">
+          <svg class="modal-svg">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
