--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,9 @@
               <a class="header-link" href="./index.html">Studio</a>
             </li>
             <li class="header-item">
-              <a class="header-link" href="./portfolio.html">Portfolio</a>
+              <a class="header-link active" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="header-item">
               <a class="header-link" href="">Contacts</a>
@@ -97,11 +99,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="portfolio-link">
-                <img
-                  src="./images/portfolio2.jpg"
-                  alt="mobile phone"
-                  width="360"
-                />
+                <div class="portfolio-img">
+                  <img
+                    src="./images/portfolio2.jpg"
+                    alt="mobile phone"
+                    width="360"
+                  />
+                  <div class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="heading">
                   <h2 class="portfolio-subject">Cashless Payment</h2>
                   <p class="portfolio-text">Marketing</p>
