--- a/portfolio.html
+++ b/portfolio.html
@@ -84,11 +84,18 @@
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <a href="" class="portfolio-link">
-                <img
-                  src="./images/portfolio1.jpg"
-                  alt="mobile app slides"
-                  width="360"
-                />
+                <div class="portfolio-img">
+                  <img
+                    src="./images/portfolio1.jpg"
+                    alt="mobile app slides"
+                    width="360"
+                  />
+                  <div class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="heading">
                   <h2 class="portfolio-subject">
                     Banking App Interface Concept
@@ -119,11 +126,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="portfolio-link">
-                <img
-                  src="./images/portfolio3.jpg"
-                  alt="mobile phone and laptop"
-                  width="360"
-                />
+                <div class="portfolio-img">
+                  <img
+                    src="./images/portfolio3.jpg"
+                    alt="mobile phone and laptop"
+                    width="360"
+                  />
+                  <div class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="heading">
                   <h2 class="portfolio-subject">Meditaion App</h2>
                   <p class="portfolio-text">App</p>
@@ -131,12 +145,19 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="portfolio-link"
-                ><img
-                  src="./images/portfolio4.jpg"
-                  alt="car salon"
-                  width="360"
-                />
+              <a href="" class="portfolio-link">
+                <div class="portfolio-img">
+                  <img
+                    src="./images/portfolio4.jpg"
+                    alt="car salon"
+                    width="360"
+                  />
+                  <div class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="heading">
                   <h2 class="portfolio-subject">Taxi Service</h2>
                   <p class="portfolio-text">Marketing</p>
@@ -144,12 +165,19 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="portfolio-link"
-                ><img
-                  src="./images/portfolio5.jpg"
-                  alt="Screen illustration of a mobile phone"
-                  width="360"
-                />
+              <a href="" class="portfolio-link">
+                <div class="portfolio-img">
+                  <img
+                    src="./images/portfolio5.jpg"
+                    alt="Screen illustration of a mobile phone"
+                    width="360"
+                  />
+                  <div class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="heading">
                   <h2 class="portfolio-subject">Screen Illustration</h2>
                   <p class="portfolio-text">Design</p>
@@ -157,12 +185,19 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="portfolio-link"
-                ><img
-                  src="./images/portfolio6.jpg"
-                  alt="the girl with the phone"
-                  width="360"
-                />
+              <a href="" class="portfolio-link">
+                <div class="portfolio-img">
+                  <img
+                    src="./images/portfolio6.jpg"
+                    alt="the girl with the phone"
+                    width="360"
+                  />
+                  <div class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="heading">
                   <h2 class="portfolio-subject">Online Courses</h2>
                   <p class="portfolio-text">Marketing</p>
@@ -170,12 +205,19 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="portfolio-link"
-                ><img
-                  src="./images/portfolio7.jpg"
-                  alt="Instagram profile presentation"
-                  width="360"
-                />
+              <a href="" class="portfolio-link">
+                <div class="portfolio-img">
+                  <img
+                    src="./images/portfolio7.jpg"
+                    alt="Instagram profile presentation"
+                    width="360"
+                  />
+                  <div class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="heading">
                   <h2 class="portfolio-subject">Instagram Stories Concept</h2>
                   <p class="portfolio-text">Design</p>
@@ -183,12 +225,19 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="portfolio-link"
-                ><img
-                  src="./images/portfolio8.jpg"
-                  alt="vegetables in a bag"
-                  width="360"
-                />
+              <a href="" class="portfolio-link">
+                <div class="portfolio-img">
+                  <img
+                    src="./images/portfolio8.jpg"
+                    alt="vegetables in a bag"
+                    width="360"
+                  />
+                  <div class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="heading">
                   <h2 class="portfolio-subject">Organic Food</h2>
                   <p class="portfolio-text">Web Site</p>
@@ -197,11 +246,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="portfolio-link">
-                <img
-                  src="./images/portfolio9.jpg"
-                  alt="a cup of coffee"
-                  width="360"
-                />
+                <div class="portfolio-img">
+                  <img
+                    src="./images/portfolio9.jpg"
+                    alt="a cup of coffee"
+                    width="360"
+                  />
+                  <div class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="heading">
                   <h2 class="portfolio-subject">Fresh Coffee</h2>
                   <p class="portfolio-text">Web Site</p>
